--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -52,12 +52,12 @@
                                 <input type="text" class="form-control" name="streetaddress" placeholder="House number and street name" required>
                             </div>
                         </div>
-                        <div class="col-md-12">
+                        {% comment %} <div class="col-md-12">
                             <div class="form-group">
                                 <label for="towncity">Town / City</label>
                                 <input type="text" class="form-control" name="towncity" placeholder="Town / City" required>
                             </div>
-                        </div>
+                        </div> {% endcomment %}
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="postcodezip">Postcode / ZIP</label>
